# doc/api.yaml
@@ -112,9 +112,9 @@ paths:
                   $ref: "#/components/schemas/uid_name"
               example:
                 - user_id: "123e4567-e89b-12d3-a456-426655440000"
-                  username: "Maria"
+                  name: "Maria"
                 - user_id: "123e4567-e89b-12d3-a456-426655440001"
-                  username: "Filippo"
+                  name: "Filippo"
         '404':
           description: The user does not exist.
           content:
@@ -152,9 +152,9 @@ paths:
                   $ref: "#/components/schemas/uid_name"
               example:
                 - user_id: "123e4567-e89b-12d3-a456-426655440000"
-                  username: "Maria"
+                  name: "Maria"
                 - user_id: "123e4567-e89b-12d3-a456-426655440001"
-                  username: "Filippo"
+                  name: "Filippo"
         '404':
           description: The user does not exist.
           content:
@@ -360,9 +360,9 @@ paths:
                   $ref: "#/components/schemas/uid_name"
               example:
                 - user_id: "123e4567-e89b-12d3-a456-426655440000"
-                  username: "Maria"
+                  name: "Maria"
                 - user_id: "123e4567-e89b-12d3-a456-426655440001"
-                  username: "Filippo"
+                  name: "Filippo"
         '404':
           description: The user or the photo does not exist.
           content:
@@ -493,9 +493,9 @@ paths:
                   $ref: "#/components/schemas/uid_name"
               example:
                 - user_id: "123e4567-e89b-12d3-a456-426655440000"
-                  username: "Maria"
+                  name: "Maria"
                 - user_id: "123e4567-e89b-12d3-a456-426655440001"
-                  username: "Filippo"
+                  name: "Filippo"
         '404':
           description: No user found.
           content:
@@ -544,7 +544,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/user_profile"
               example:
-                username: "Maria"
+                name: "Maria"
                 followers: 25
                 following: 32
                 followed: true
@@ -881,7 +881,7 @@ paths:
                 $ref: "#/components/schemas/photo_stream"
               example:
                 - user_id: "1a2b3c4d-5e6f-7a8b-9c0d-1e2f3a4b5c6d"
-                  username: "Federicus"
+                  name: "Federicus"
                   photo_id: 157
                   upload_time: "2020-11-20T12:00:00Z"
                   likes: 93
@@ -982,7 +982,7 @@ components:
       type: object
       description: The profile of the user.
       properties:
-        username:
+        name:
           $ref: "#/components/schemas/name"
         followers:
           $ref: "#/components/schemas/followers_n"
@@ -1024,7 +1024,7 @@ components:
       properties:
         user_id:
           $ref: "#/components/schemas/uid"
-        username:
+        name:
           $ref: "#/components/schemas/name"
         photo_id:
           $ref: "#/components/schemas/photo_id"
